objects/CM_Status_Setting__mdt.object
<CustomObject>
    <description>Holds the Status settings for the campaigns by type of campaign</description>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true, this status is the default status for the campaign</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>the group this Status belongs to.</description>
        <label>Group Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>an integer number that gives the sort order to the specific status within the picklist</description>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true, this status is counted as Member Responded to this campaign</description>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <label>CM Status Setting</label>
    <pluralLabel>CM Status Settings</pluralLabel>
</CustomObject>